--- a/ezikr/templates/ezikr/Home.html
+++ b/ezikr/templates/ezikr/Home.html
@@ -188,6 +188,28 @@ background-color:#059862!important;
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col mt-5 p-5">
+      <div class="container card d-flex justify-content-center" style="padding: 0px; max-width:230px; border-radius: 10px 10px;" height="360.5px">
+        <a href="#" style="text-decoration: none;">
+        <div class="card-body bg-dark text-light" style=" border-radius: 10px 10px 0 0;"><p style="font-size:14px;padding-left:2px;padding-right:2px;">Send <span style="font-size:20px">100 Salam</span> on Prophet Muhammad(PBUH)</p></div>
+        <div class="card-footer bg-success text-center text-light" style="font-family:Sofia; border-radius:0 0 10px 10px;">As-Salamu-Alaika-Ya-Rasulallah</div>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col mt-5 p-5">
+      <div class="container card d-flex justify-content-center" style="padding: 0px; max-width:230px; border-radius: 10px 10px;" height="360.5px">
+        <a href="#" style="text-decoration: none;">
+        <div class="card-body bg-dark text-light" style=" border-radius: 10px 10px 0 0;"><p style="font-size:14px;padding-left:2px;padding-right:2px;">Send <span style="font-size:20px">100 Salam</span> on Prophet Muhammad(PBUH)</p></div>
+        <div class="card-footer bg-success text-center text-light" style="font-family:Sofia; border-radius:0 0 10px 10px;">As-Salamu-Alaika-Ya-Rasulallah</div>
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
 
 {% endblock content %}
